saint-lascivious.github.io: update pokedexoverdns examples
 - include national dex examples
 - include multilingual examples
   us
   jp
   fr
   de

Changes to be committed:
 - modified:   .formatted/pokedexoverdns.html
 - modified:   pokedexoverdns.html

--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -189,18 +189,72 @@
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
-            <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            <p>
+              National Pokedex
+            </p>
             <pre>dig +short txt 265.pokedex @dns.sainternet.xyz</pre>
+            <p>
+              English US
+            </p>
+            <pre>dig +short txt wurmple.pokedex @dns.sainternet.xyz</pre>
+            <p>
+              Nihon
+            </p>
+            <pre>dig +short txt kemusso.pokedex @dns.sainternet.xyz</pre>
+            <p>
+              Français
+            </p>
+            <pre>dig +short txt chenipotte.pokedex @dns.sainternet.xyz</pre>
+            <p>
+              Deutsch
+            </p>
+            <pre>dig +short txt waumpel.pokedex @dns.sainternet.xyz</pre>
             <p>
               Example Pokédex over DNS queries using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
             </p>
-            <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            <p>
+              National Pokédex
+            </p>
             <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
+            <p>
+              English US
+            </p>
+            <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Nihon
+            </p>
+            <pre>RRTYPE=TXT dnslookup kemusso.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Français
+            </p>
+            <pre>RRTYPE=TXT dnslookup chenipotte.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Deutsch
+            </p>
+            <pre>RRTYPE=TXT dnslookup waumpel.pokedex dns.sainternet.xyz</pre>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
             </p>
-            <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            <p>
+              National Pokedex
+            </p>
             <pre>nslookup -type=txt 265.pokedex dns.sainternet.xyz</pre>
+            <p>
+              English US
+            </p>
+            <pre>nslookup -type=txt wurmple.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Nihon
+            </p>
+            <pre>nslookup -type=txt kemusso.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Français
+            </p>
+            <pre>nslookup -type=txt chenipotte.pokedex dns.sainternet.xyz</pre>
+            <p>
+              Deutsch
+            </p>
+            <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
             <p>
               <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> local-data record configuration for the <b>.pokedex</b> virtual domain available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
             </p>
