saint-lascivious.github.io: update faq
Changes to be committed:
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   frequentlyaskedquestions.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - new file:   resources/stylesheets/.formatted/party-time.min.css
 - new file:   resources/stylesheets/party-time.min.css
 - modified:   serviceworker.min.js

--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -64,6 +64,8 @@
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/party-time.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/party-time.min.css">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -154,7 +156,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a>, <a class="embiggen" href="#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a>, <a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#whatswithalltherainbows">What’s with All the Rainbows?</a>, <a class="embiggen" href="#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a>, <a class="embiggen" href="#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a>, <a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
             </div>
           </div>
         </div>
@@ -164,6 +166,45 @@
             <h3><span class="embiggen">Frequently Asked Questions</span></h3>
             <p>
               Answers to some frequently asked questions regarding Sainternet Filtered DNS.
+            </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="whatswithalltherainbows">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">What’s with All the Rainbows?</span></h3>
+            <p class="embiggen sainternet-subheader-centered">
+              Lots of Your Projects Seem to Incorporate Rainbow Schemes, What Gives?
+            </p>
+            <p>
+              I like the aesthetic.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              This Whole Site Is a Rainbow, Is It Some Kind of LGBTQIA+ Thing?
+            </p>
+            <p>
+              Would that matter?
+            </p>
+            <p>
+              Also, no.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Are You Some Kind of LGBTQIA+ Person?
+            </p>
+            <p>
+              That's irrelevant.
+            </p>
+            <p>
+              Also, yes.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Could You Maybe Tone It down a Bit?
+            </p>
+            <p class="embiggen party-time" id="tooltip-no">
+              No.
+            </p>
+            <p class="mdl-tooltip mdl-tooltip--top" for="tooltip-no">
+              You can't tell me what to do.
             </p>
            </div>
         </div>
