saint-lascivious.github.io: update faq
 - more clarity

Changes to be committed:
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   frequentlyaskedquestions.html

--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -174,10 +174,19 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">What’s with All the Rainbows?</span></h3>
             <p class="embiggen sainternet-subheader-centered">
+              People Actually Ask This Question?
+            </p>
+            <p>
+              Yes.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
               Lots of Your Projects Seem to Incorporate Rainbow Schemes, What Gives?
             </p>
             <p>
-              I like the aesthetic.
+              I like rainbows.
+            </p>
+            <p>
+              Who doesn't like rainbows?
             </p>
             <p class="embiggen sainternet-subheader-centered">
               This Whole Site Is a Rainbow, Is It Some Kind of LGBTQIA+ Thing?
@@ -185,17 +194,32 @@
             <p>
               Would that matter?
             </p>
-            <p>
-              Also, no.
-            </p>
             <p class="embiggen sainternet-subheader-centered">
               Are You Some Kind of LGBTQIA+ Person?
             </p>
             <p>
-              That's irrelevant.
+              Would <i>that</i> matter?
             </p>
             <p>
               Also, yes.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              It Matters
+            </p>
+            <p>
+              That's not a question.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              I Don't Like It
+            </p>
+            <p>
+              That's not a question either.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              I Don’t Like It, but in the Form of a Question?
+            </p>
+            <p>
+              I don't care.
             </p>
             <p class="embiggen sainternet-subheader-centered">
               Could You Maybe Tone It down a Bit?
