saint-lascivious.github.io: dev diary: gotta go fast
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   newsandupdates.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -174,7 +174,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#somepunaboutblocksorblocking"><b>Some Pun About Blocks or Blocking</b></a>, <a class="embiggen" href="#thepolishinvasionof2023">The Polish Invasion of 2023</a>, <a class="embiggen" href="#certaindoom">CERTain Doom</a>, <a class="embiggen" href="#enablejavascript">Enable JavaScript</a>, <a class="embiggen" href="#devdiarygoingoffline">De<s>ar</s>v Diary: Going Offline</a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="archive.html">Archived Posts</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#devdiarygottagofast"><b>De<s>ar</s>v Diary: Gotta Go Fast!</b></a>, <a class="embiggen" href="#somepunaboutblocksorblocking">Some Pun About Blocks or Blocking</a>, <a class="embiggen" href="#thepolishinvasionof2023">The Polish Invasion of 2023</a>, <a class="embiggen" href="#certaindoom">CERTain Doom</a>, <a class="embiggen" href="#enablejavascript">Enable JavaScript</a>, <a class="embiggen" href="#devdiarygoingoffline">De<s>ar</s>v Diary: Going Offline</a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="archive.html">Archived Posts</a>
             </div>
           </div>
         </div>
@@ -187,12 +187,51 @@
             </p>
            </div>
         </div>
+        <div class="sainternet-container mdl-grid" id="devdiarygottagofast">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">De<s>ar</s>v Diary: Gotta Go Fast!</span></h3>
+            <p class="embiggen" id="datetime">
+              first posted on Tuesday, 9 May 2023 01:35+12:00 (NZST)
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              How sainternet.xyz Managed 100%<a href="#disclaimer">*</a> on Major Website Performance Tests
+            </p>
+            <p>
+              I know the pain of waiting for a website to load.
+            </p>
+            <p>
+              There's no beating about the bush. It sucks. Not only is it frustrating, it can be a major factor in whether or not users stick around and browse a site.
+            </p>
+            <p>
+              That's why I'm always looking for ways to optimise website performance and deliver a faster, smoother experience with clean and striking visuals for everyone who visits my site.
+            </p>
+            <p>
+              I've tried many different tactics to achieve faster load times, but I've found that a combination of strategies works best. For example, self-hosting everything possible, including Google fonts, is a great way to reduce the number of external requests and speed up page load times. I've also embraced modern image and font formats, which can significantly reduce file sizes and improve load times.
+            </p>
+            <p>
+              But it's not just about hosting and file formats. I've also implemented a JavaScript-powered FOUT font loading policy (the <i>perception</i> of fast loading is just as important, text should display as quickly as possible) and deferred JavaScript to ensure that my pages load quickly and efficiently. Aggressive CSS, JavaScript and HTML minification has been a key strategy, as has preloading assets and prerendering pages to speed up subsequent page loads.
+            </p>
+            <p>
+              I've paid close attention to image sizing and scaling, in particular to avoid CLS (Cumulative Layout Shift), which can make for a frustrating user experience. By taking all of these steps, I've achieved a significantly faster web experience.
+            </p>
+            <p>
+              Overall, optimising <code>sainternet.xyz</code> is an ongoing process, but by staying on top of the latest strategies and testing out new approaches, I'm confident that I can continue to deliver a better, faster web experience for all visitors.
+            </p>
+            <p class="embiggen sainternet-subheader-centered" id="disclaimer">
+              Disclaimer
+            </p>
+            <p>
+              *On desktop browsers. Lighthouse's emulated mobile hardware and connectivity is <s>bulls…</s> a rock, vaguely near an FM radio tower.
+            </p>
+           </div>
+        </div>
         <div class="sainternet-container mdl-grid" id="somepunaboutblocksorblocking">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Some Pun About Blocks or Blocking</span></h3>
             <p class="embiggen" id="datetime">
-              first posted on Monday, 8 May 2023 21:00+12:00 (NZST)
+              first posted on Monday, 8 May 2023 16:40+12:00 (NZST)
             </p>
             <p>
               Have you ever wondered what it might look like to graph the rate of blocked queries on <code>dns.sainternet.xyz</code>?
@@ -249,7 +288,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">The Polish Invasion of 2023</span></h3>
             <p class="embiggen" id="datetime">
-              first posted on Sunday, 6 May 2023 16:40+12:00 (NZST)
+              first posted on Sunday, 6 May 2023 21:00+12:00 (NZST)
             </p>
             <p class="embiggen sainternet-subheader-centered">
               Poddaję się!
@@ -386,6 +425,7 @@
             <p class="embiggen" id="datetime">
               first posted on Tuesday, 25 April 2023 01:15+12:00 (NZST)
             </p>
+            <p>
               <code>sainternet.xyz</code> leans on JavaScript fairly heavily for function and performance.
             </p>
             <p>
