saint-lascivious.github.io: minor updates
Changes to be committed:
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   resources/stylesheets/.formatted/party-time.min.css
 - modified:   resources/stylesheets/party-time.min.css

--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -204,7 +204,7 @@
               Also, yes.
             </p>
             <p class="embiggen sainternet-subheader-centered">
-              It Matters
+              It Does Matter
             </p>
             <p>
               That's not a question.
