--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -192,7 +192,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">De<s>ar</s>v Diary: Gotta Go Fast!</span></h3>
             <p class="embiggen" id="datetime">
-              first posted on Tuesday, 9 May 2023 07:00+12:00 (NZST)
+              first posted on Tuesday, 9 May 2023 07:00+12:00 (NZST)<br>updated on Tuesday, 9 May 2023 20:00+12:00 (NZST)
             </p>
             <p class="embiggen sainternet-subheader-centered">
               How sainternet.xyz Managed 100%<a href="#disclaimer">*</a> on Major Website Performance Tests
@@ -206,14 +206,26 @@
             <p>
               That's why I'm always looking for ways to optimise website performance and deliver a faster, smoother experience with clean and striking visuals for everyone who visits my site.
             </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Sometimes, You Actually Want to Finish Fast
+            </p>
+            <p>
+              The <a href="index.html">Home page</a> reliably provides a sub-second SI (Speed Index) around ~06.s, with an FCP (First Contentful Paint) of ~0.4s and LCP (Largest Contentful Paint) of ~0.7s on a fresh load with no existing cache. Subsequent page loads (with cache) are even faster.
+            </p>
             <p>
               I've tried many different tactics to achieve faster load times, but I've found that a combination of strategies works best. For example, self-hosting everything possible, including Google fonts, is a great way to reduce the number of external requests and speed up page load times. I've also embraced modern image and font formats, which can significantly reduce file sizes and improve load times.
             </p>
             <p>
               But it's not just about hosting and file formats. I've also implemented a JavaScript-powered FOUT (Flash Of Unstyled Text) font loading policy (the <i>perception</i> of fast loading is just as important, text should display as quickly as possible) and deferred JavaScript to ensure that my pages load quickly and efficiently.
             </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Flash (Not That One), Ah-ah, Saviour of the Universe
+            </p>
             <p>
               The basic premise with FOUT, is to display the first available font that matches in your list, while promising to load the fonts you actually need, and then swapping fonts as soon as you know they are available. This allows the page to be rendered prior to fonts having loaded completely and provides a significant reduction in perceived load time.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Size Does Matter
             </p>
             <p>
               Aggressive CSS, JavaScript and HTML minification has also been a key strategy, as has preloading assets and prerendering pages to speed up subsequent page loads.
@@ -228,7 +240,10 @@
               Disclaimer
             </p>
             <p>
-              *On desktop browsers. Lighthouse's emulated mobile hardware and connectivity is <s>bulls…</s> a rock, vaguely near an FM radio tower.
+              *On desktop browsers. Lighthouse**'s emulated mobile hardware and connectivity is <s>bulls…</s> a rock, placed vaguely near an FM radio tower.
+            </p>
+            <p>
+              **Everything uses Lighthouse.
             </p>
            </div>
         </div>
